--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="dark-bg">
 
-        <div class="loader"></div>
+        <!-- <div class="loader"></div> -->
 
     <!--=======================================
             Modal Start Here
