--- a/pages/Login.html
+++ b/pages/Login.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-    <div class="loader"></div>
+    <!-- <div class="loader"></div> -->
 
     <!--=======================================
             login Start Here
