--- a/pages/Explore-Creators.html
+++ b/pages/Explore-Creators.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../assets/img/favicon.png" sizes="16x16">
-    <title>Ethoz - NFT Marketplace HTML Template</title>
+    <title>Creato - NFT Marketplace</title>
     <link rel="stylesheet" href="../assets/libs/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/libs/owl.carousel/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="../assets/libs/owl.carousel/dist/assets/owl.theme.default.min.css">
@@ -17,7 +17,7 @@
 
     <div class="dark-bg">
 
-    <div class="loader"></div>
+    <!-- <div class="loader"></div> -->
 
     <!--=======================================
             Modal Start Here
@@ -226,14 +226,14 @@
                             <svg class="burger-icon" width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3.75 12h16.5M4 6h9M11 18h9" stroke="#999" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
                         </div>
                         <a href="../index.html" class="logo-otr">
-                            <img class="logo-img" src="../assets/img/Ethoz-white.png" alt="brand-logo">
+                            <img class="logo-img" src="../assets/img/brand-logo-dark.png" alt="brand-logo">
                         </a>
                     </div>
                     <div class="input-main">
-                        <input class="input" type="text" placeholder="Search Ethoz">
+                        <input class="input" type="text" placeholder="Search">
                         <svg class="search-icon" width="18" height="18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8 15A7 7 0 108 1a7 7 0 000 14zM12.95 12.95L17 17" stroke="#999" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
                     </div>
-                    <div class="navigation-otr">
+                    <!-- <div class="navigation-otr">
                         <ul class="navigation-inr">
                             <li class="nav-li">
                                 <a class="nav-a body-sb">Home</a>
@@ -373,7 +373,7 @@
                                 </ul>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
                     <div class="action-otr">
                         <a href="../pages/Create.html" class="btn-fill btn-create">Create</a>
                         <div class="bell-icon-otr">
