Added button to switch between light and dark theme

--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@
                         </ul>
                     </div> -->
                     <div class="action-otr">
+                        <a class = "change-theme" href="https://satisshhhhhh.github.io/Ethoz-Light-Cryptoverse/"><img src="./assets/img/sun.png" alt="Change Theme"></a>
                         <a href="./pages/Create.html" class="btn-fill btn-create">Create</a>
                         <div class="bell-icon-otr">
                             <a class="icon-inr click-open2">
