Modified Single-Creator Page

--- a/pages/Single-Creator.html
+++ b/pages/Single-Creator.html
@@ -29,7 +29,7 @@
                     <svg class="icon-close" width="18" height="18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M17 1L1 17M17 17L1 1" stroke="#CFCFCF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
                     <div class="logo-otr">
                         <a href="../index.html" class="logo-inr">
-                            <img class="logo" src="../assets/img/brand-logo.png" alt="brand-logo">
+                            <img class="logo" src="../assets/img/brand-logo-dark.png" alt="brand-logo">
                         </a>
                     </div>
                     <div class="input-main">
@@ -226,14 +226,14 @@
                             <svg class="burger-icon" width="24" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3.75 12h16.5M4 6h9M11 18h9" stroke="#999" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
                         </div>
                         <a href="../index.html" class="logo-otr">
-                            <img class="logo-img" src="../assets/img/brand-logo.png" alt="brand-logo">
+                            <img class="logo-img" src="../assets/img/brand-logo-dark.png" alt="brand-logo">
                         </a>
                     </div>
                     <div class="input-main">
                         <input class="input" type="text" placeholder="Search Ethoz">
                         <svg class="search-icon" width="18" height="18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8 15A7 7 0 108 1a7 7 0 000 14zM12.95 12.95L17 17" stroke="#999" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
                     </div>
-                    <div class="navigation-otr">
+                    <!-- <div class="navigation-otr">
                         <ul class="navigation-inr">
                             <li class="nav-li">
                                 <a class="nav-a body-sb">Home</a>
@@ -373,8 +373,9 @@
                                 </ul>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
                     <div class="action-otr">
+                        <a class = "change-theme" href="https://satisshhhhhh.github.io/Ethoz-Light-Cryptoverse/"><img src="../assets/img/sun.png" alt="Change Theme"></a>
                         <a href="../pages/Create.html" class="btn-fill btn-create">Create</a>
                         <div class="bell-icon-otr">
                             <a class="icon-inr click-open2">
@@ -430,7 +431,7 @@
                         </div>
                         <div class="profile-otr">
                             <a class="profile-inr click-open3">
-                                <img class="creator" src="../assets/img/user-Image17.jpg" alt="creator">
+                                <img class="creator" src="../assets/pngs/ToyFaces_Tansparent_BG_47.png" alt="creator">
                                 <p class="price body-sb">3.067 ETH</p>
                             </a>
                             <div class="icon-hover-2 click-event3">
@@ -1256,7 +1257,7 @@
                                                 </div>
                                                 <div class="create-img-otr">
                                                     <a href="../pages/Single-Creator.html" class="create-img">
-                                                        <img class="img-create" src="../assets/img/user-Image17.jpg" alt="create-img">
+                                                        <img class="img-create" src="../assets/pngs/ToyFaces_Tansparent_BG_47.png" alt="create-img">
                                                         <div class="check-otr">
                                                             <svg class="check-icon" width="8" height="8" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6.583 2.25l-3.5 3.5L1.333 4" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
                                                         </div>
@@ -1265,7 +1266,7 @@
                                                         <div class="hover-box-inr">
                                                             <div class="user-info">
                                                                 <a href="" class="create-img">
-                                                                    <img class="img-create" src="../assets/img/user-Image17.jpg" alt="create-img">
+                                                                    <img class="img-create" src="../assets/pngs/ToyFaces_Tansparent_BG_47.png" alt="create-img">
                                                                     <div class="check-otr">
                                                                         <svg class="check-icon" width="10" height="10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.438 2.813L4.061 7.188 1.876 5" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
                                                                     </div>
@@ -1893,7 +1894,7 @@
                                                 </div>
                                                 <div class="create-img-otr">
                                                     <a href="../pages/Single-Creator.html" class="create-img">
-                                                        <img class="img-create" src="../assets/img/user-Image17.jpg" alt="create-img">
+                                                        <img class="img-create" src="../assets/pngs/ToyFaces_Tansparent_BG_47.png" alt="create-img">
                                                         <div class="check-otr">
                                                             <svg class="check-icon" width="8" height="8" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6.583 2.25l-3.5 3.5L1.333 4" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
                                                         </div>
@@ -1902,7 +1903,7 @@
                                                         <div class="hover-box-inr">
                                                             <div class="user-info">
                                                                 <a href="" class="create-img">
-                                                                    <img class="img-create" src="../assets/img/user-Image17.jpg" alt="create-img">
+                                                                    <img class="img-create" src="../assets/pngs/ToyFaces_Tansparent_BG_47.png" alt="create-img">
                                                                     <div class="check-otr">
                                                                         <svg class="check-icon" width="10" height="10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.438 2.813L4.061 7.188 1.876 5" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
                                                                     </div>
@@ -2530,7 +2531,7 @@
                                                 </div>
                                                 <div class="create-img-otr">
                                                     <a href="../pages/Single-Creator.html" class="create-img">
-                                                        <img class="img-create" src="../assets/img/user-Image17.jpg" alt="create-img">
+                                                        <img class="img-create" src="../assets/pngs/ToyFaces_Tansparent_BG_47.png" alt="create-img">
                                                         <div class="check-otr">
                                                             <svg class="check-icon" width="8" height="8" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6.583 2.25l-3.5 3.5L1.333 4" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
                                                         </div>
@@ -2539,7 +2540,7 @@
                                                         <div class="hover-box-inr">
                                                             <div class="user-info">
                                                                 <a href="" class="create-img">
-                                                                    <img class="img-create" src="../assets/img/user-Image17.jpg" alt="create-img">
+                                                                    <img class="img-create" src="../assets/pngs/ToyFaces_Tansparent_BG_47.png" alt="create-img">
                                                                     <div class="check-otr">
                                                                         <svg class="check-icon" width="10" height="10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.438 2.813L4.061 7.188 1.876 5" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
                                                                     </div>
@@ -3167,7 +3168,7 @@
                                                 </div>
                                                 <div class="create-img-otr">
                                                     <a href="../pages/Single-Creator.html" class="create-img">
-                                                        <img class="img-create" src="../assets/img/user-Image17.jpg" alt="create-img">
+                                                        <img class="img-create" src="../assets/pngs/ToyFaces_Tansparent_BG_47.png" alt="create-img">
                                                         <div class="check-otr">
                                                             <svg class="check-icon" width="8" height="8" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6.583 2.25l-3.5 3.5L1.333 4" stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
                                                         </div>
@@ -3176,7 +3177,7 @@
                                                         <div class="hover-box-inr">
                                                             <div class="user-info">
                                                                 <a href="" class="create-img">
-                                                                    <img class="img-create" src="../assets/img/user-Image17.jpg" alt="create-img">
+                                                                    <img class="img-create" src="../assets/pngs/ToyFaces_Tansparent_BG_47.png" alt="create-img">
                                                                     <div class="check-otr">
                                                                         <svg class="check-icon" width="10" height="10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.438 2.813L4.061 7.188 1.876 5" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
                                                                     </div>
@@ -3627,7 +3628,7 @@
                     <div class="col-lg-3 col-md-12 col-log-otr">
                         <div class="col-logo-inr">
                             <a href="../index.html" class="logo-otr">
-                                <img class="logo-img" src="../assets/img/brand-logo.png" alt="brand-logo">
+                                <img class="logo-img" src="../assets/img/brand-logo-dark.png" alt="brand-logo">
                             </a>
                             <ul class="icon-ul">
                                 <li class="icon-li">
